# px4_uav_patrol

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gen_patrol_mission.py  package.xml
current_tour/: 37SquareFarmCorner.385.e15n15.json
include/: energy_logger.hpp  patrol.hpp
missions/: tour_0001.mission.json  tour_e0n0_25SquareFarmCentered.mission.json  tour_e0n0_37SquareFarmCentered.mission.json  tour_e0n0_37SquareFarmCorner.mission.json  tour_e10n10_37SquareFarmCorner.mission.json  tour_e15n15_37SquareFarmCorner.mission.json  tour_e20n20_37SquareFarmCentered.mission.json  tour_e20n20_37SquareFarmCorner.mission.json  tour_e5n5_37SquareFarmCorner.mission.json
past_tours/: 37SquareFarmCentered.105.e0n0.json  37SquareFarmCentered.157.e5n5.json  37SquareFarmCentered.503.e20n20.json  37SquareFarmCorner.104.e0n0.json  37SquareFarmCorner.157.e5n5.json  37SquareFarmCorner.268.e10n10.json  37SquareFarmCorner.503.e20n20.json
scenarios/: 37SquareFarmCentered.tsp  37SquareFarmCorner.tsp
src/: main.cpp
